--- a/VaccineC/src/app/pages/empresa/empresas.component.html
+++ b/VaccineC/src/app/pages/empresa/empresas.component.html
@@ -15,7 +15,7 @@
                 </mat-tab>
                 <mat-tab label="Agenda">
                     <app-empresa-agenda></app-empresa-agenda>
-                    <button mat-fab id="add-schedule-btn" class="float-btn" color="primary" (click)="openScheduleDialog()" aria-label="Add button" matTooltip="Inserir Horário" matTooltipPosition="above">
+                    <button mat-fab id="add-schedule-btn" class="float-btn create-button" (click)="openScheduleDialog()" aria-label="Add button" matTooltip="Inserir Horário" matTooltipPosition="above">
                     <mat-icon>add</mat-icon>
                 </button>
                 </mat-tab>
