--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-cadastro/formas-pagamento-cadastro.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-cadastro/formas-pagamento-cadastro.component.html
@@ -16,10 +16,10 @@
                     <input type="number" matInput #input maxlength="10" id="parcels" required="true">
                 </mat-form-field>
             </div>
-
+            
             <div class="div-row-input registration-button-row">
-                <button mat-raised-button color="primary">Salvar</button>
-                <button mat-raised-button color="warn">Excluir</button>
+                <button mat-raised-button class="create-button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
+                <button mat-raised-button color="warn"><span class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
             </div>
 
         </div>
