--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -12,7 +12,7 @@
         </mat-tab>
         <mat-tab label="Recursos">
           <app-usuarios-recursos></app-usuarios-recursos>
-          <button mat-fab id="add-phone-btn" class="float-btn" color="primary" (click)="openAddScreensDialog()"
+          <button mat-fab id="add-phone-btn" class="float-btn create-button" (click)="openAddScreensDialog()"
             aria-label="Add button" matTooltip="Inserir Recursos" matTooltipPosition="above">
             <mat-icon>add</mat-icon>
           </button>
