--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-cadastro/usuarios-cadastro.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-cadastro/usuarios-cadastro.component.html
@@ -57,9 +57,10 @@
         </mat-form-field>
       </div>
       <div class="div-row-input registration-button-row">
-        <button class="create-button" mat-raised-button>Criar</button>
-        <button mat-raised-button color="warn">Desativar</button>
-        <button mat-raised-button color="primary">Redefinir Senha</button>
+        <button mat-raised-button class="create-button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Criar</span></button>
+        <button mat-raised-button class="create-button"><span class="fa-solid fa-user-check me-1 w-20px"></span><span>Ativar</span></button>
+        <button mat-raised-button color="warn"><span class="fa-solid fa-user-slash me-1 w-20px"></span><span>Desativar</span></button>
+        <button mat-raised-button color="primary"><span class="fa-solid fa-retweet me-1 w-20px"></span><span>Redefinir Senha</span></button>
       </div>
     </div>
   </div>
