--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.html
@@ -7,7 +7,7 @@
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
-    <button id="mat-search-button" mat-raised-button color="primary">Pesquisar</button>
+    <button id="mat-search-button" mat-raised-button color="primary"><span class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
   </div>
 </div>
 <div id="search-table">
