--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -12,7 +12,8 @@
                             <h5 class="my-3 text-gray-800">John Doe</h5>
                             <p class="text-muted mb-4">john.doe@empresa.com</p>
                             <div class="d-flex justify-content-center mb-2">
-                                <button mat-raised-button color="primary" (click)="openPasswordDialog()" >Alterar Senha</button>                            </div>
+                                <button mat-raised-button color="primary" (click)="openPasswordDialog()"><span class="fa-solid fa-pen-to-square me-1 w-20px"></span><span>Alterar Senha</span></button>
+                            </div>
                         </div>
                     </div>
                 </div>
