--- a/VaccineC/src/app/pages/pessoas/pessoas-complemento/pessoas-complemento.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-complemento/pessoas-complemento.component.html
@@ -45,10 +45,6 @@
                     <mat-datepicker #picker2></mat-datepicker>
                 </mat-form-field>
             </div>
-            <div class="div-row-input complement-button-row">
-                <button mat-raised-button color="primary">Salvar</button>
-            </div>
-
         </div>
         <div class="offset-sm-1 col-sm-11 p-0 d-none" id="person-juridical">
             <div class="div-row-input">
@@ -64,10 +60,9 @@
                         mask="00.000.000/0000-00" placeholder="00.000.000/0000-00">
                 </mat-form-field>
             </div>
-
-            <div class="div-row-input complement-button-row">
-                <button mat-raised-button color="primary">Salvar</button>
-            </div>
+        </div>
+        <div class="offset-sm-1 col-sm-3">
+            <button mat-raised-button class="create-button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
         </div>
     </div>
 </form>
