--- a/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -7,7 +7,8 @@
                 <mat-icon>close</mat-icon>
             </button>
         </mat-form-field>
-        <button id="mat-search-button" mat-raised-button color="primary">Pesquisar</button>
+        <button id="mat-search-button" mat-raised-button color="primary" class="me-2"><span class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
+        <button id="mat-add-button" mat-raised-button class="create-button"><span class="fa-solid fa-plus w-20px"></span></button>
     </div>
 </div>
 
