--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -15,13 +15,13 @@
                 </mat-tab>
                 <mat-tab label="Telefones">
                     <app-pessoas-telefones></app-pessoas-telefones>
-                    <button mat-fab id="add-phone-btn" class="float-btn" color="primary" (click)="openPhoneDialog()" aria-label="Add button" matTooltip="Inserir Telefone" matTooltipPosition="above">
+                    <button mat-fab id="add-phone-btn" class="float-btn create-button" (click)="openPhoneDialog()" aria-label="Add button" matTooltip="Inserir Telefone" matTooltipPosition="above">
                         <mat-icon>add</mat-icon>
                     </button>
                 </mat-tab>
                 <mat-tab label="Endereços">
                     <app-pessoas-enderecos></app-pessoas-enderecos>
-                    <button mat-fab id="add-address-btn" class="float-btn" color="primary" (click)="openAddressDialog()" aria-label="Add button" matTooltip="Inserir Endereço" matTooltipPosition="above">
+                    <button mat-fab id="add-address-btn" class="float-btn create-button" (click)="openAddressDialog()" aria-label="Add button" matTooltip="Inserir Endereço" matTooltipPosition="above">
                         <mat-icon>add</mat-icon>
                     </button>
                 </mat-tab>
