--- a/VaccineC/src/app/pages/produto/produto.component.html
+++ b/VaccineC/src/app/pages/produto/produto.component.html
@@ -12,7 +12,7 @@
                 </mat-tab>
                 <mat-tab label="Aprazamento">
                     <app-produto-aprazamento></app-produto-aprazamento>
-                    <button mat-fab id="add-dose-btn" class="float-btn" color="primary" (click)="openDoseDialog()" aria-label="Add button" matTooltip="Inserir Dose" matTooltipPosition="above">
+                    <button mat-fab id="add-dose-btn" class="float-btn create-button" (click)="openDoseDialog()" aria-label="Add button" matTooltip="Inserir Dose" matTooltipPosition="above">
                         <mat-icon>add</mat-icon>
                     </button>
                 </mat-tab>
