--- a/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/visao-faturamento/visao-faturamento-pesquisa/visao-faturamento-pesquisa.component.scss
@@ -1,4 +1,18 @@
-.card-info {
-    height: 15rem;
-    align-self: center;
+#is-content {
+    padding: 5.5rem;
+    padding-bottom: 0;
+    padding-top: 2rem;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    transition: width 0.3s, margin 0.3s;
+}
+
+#is-content.is-content-grow {
+    margin-left: -2.5em !important;
+    padding-right: 2rem !important;
+}
+
+.card-header {
+    background-color: #ffffff !important;
 }
