--- a/VaccineC/src/app/pages/empresa/empresa-parametros/empresa-parametros.component.html
+++ b/VaccineC/src/app/pages/empresa/empresa-parametros/empresa-parametros.component.html
@@ -29,9 +29,8 @@
             </div>
 
             <div class="div-row-input registration-button-row">
-                <button mat-raised-button color="primary">Salvar</button>
+                <button mat-raised-button class="create-button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
             </div>
-
         </div>
     </div>
 </form>
