--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque-cadastro/movimentar-estoque-cadastro.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque-cadastro/movimentar-estoque-cadastro.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="mt-5" style="float:right;">
                 <button mat-mini-fab matStepperNext aria-label="Example icon button with a menu icon"
-                    matTooltip="Próximo" matTooltipPosition="above">
+                    matTooltip="Próximo" matTooltipPosition="above" color="primary">
                     <mat-icon>chevron_right</mat-icon>
                 </button>
             </div>
@@ -27,7 +27,7 @@
     <mat-step [stepControl]="secondFormGroup" label="Produtos">
         <form [formGroup]="secondFormGroup" class="mt-3">
             <div class="demo-button-container offset-sm-1 col-sm-11 p-0">
-                <button mat-mini-fab color="primary" class="demo-button me-2" (click)="openProductDialog()"
+                <button mat-mini-fab class="demo-button me-2 create-button" (click)="openProductDialog()"
                     matTooltip="Inserir Produto" matTooltipPosition="right">
                     <mat-icon>add</mat-icon>
                 </button>
@@ -67,10 +67,10 @@
             </div>
             <div class="mt-5" style="float:right;">
                 <button mat-mini-fab matStepperPrevious aria-label="Example icon button with a menu icon"
-                    matTooltip="Anterior" matTooltipPosition="above" class="me-2">
+                    matTooltip="Anterior" matTooltipPosition="above" color="primary" class="me-2">
                     <mat-icon>chevron_left</mat-icon>
                 </button>
-                <button mat-mini-fab matStepperNext color="primary" aria-label="Example icon button with a menu icon"
+                <button mat-mini-fab matStepperNext class="create-button" aria-label="Example icon button with a menu icon"
                     matTooltip="Finalizar" matTooltipPosition="above">
                     <mat-icon>done</mat-icon>
                 </button>
