--- a/VaccineC/src/app/pages/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas-cadastro/pessoas-cadastro.component.html
@@ -49,8 +49,8 @@
             </div>
 
             <div class="div-row-input registration-button-row">
-                <button mat-raised-button color="primary"><span class="fa-solid fa-floppy-disk me-2"></span><span>Salvar</span></button>
-                <button mat-raised-button color="warn"><span class="fa-solid fa-trash me-2"></span><span>Excluir</span></button>
+                <button mat-raised-button class="create-button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
+                <button mat-raised-button color="warn"><span class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
             </div>
         </div>
     </div>
