--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -130,3 +130,12 @@ html {
 .fc {
   font-size: 14px !important;
 }
+
+.create-button {
+  background-color: #3d9f3d !important;
+  color: white;
+}
+
+.w-20px {
+  width: 20px;
+}
