--- a/VaccineC/src/app/pages/aplicacao/aplicacao-pesquisa/aplicacao-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao-pesquisa/aplicacao-pesquisa.component.scss
@@ -24,9 +24,9 @@
     padding: 0px;
 }
 
-#mat-search-button {
-    margin-bottom: 0px;
-    align-self: center;
+.mat-button-entry {
+    margin-bottom: 0px !important;
+    align-self: center !important;
 }
 
 img {
