--- a/VaccineC/src/app/pages/orcamentos/orcamento-pesquisa/orcamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/orcamentos/orcamento-pesquisa/orcamento-pesquisa.component.html
@@ -1,13 +1,16 @@
 <div class="search-group">
     <div class="col-sm-11 p-0 d-flex">
-        <mat-form-field class="search-form-field col-sm-10" appearance="outline">
+        <mat-form-field class="search-form-field col-sm-9" appearance="outline">
             <mat-label>Digite o nome do responsável ou o nº do orçamento</mat-label>
             <input id="organicSearch" matInput type="text" [(ngModel)]="value">
             <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                 <mat-icon>close</mat-icon>
             </button>
         </mat-form-field>
-        <button id="mat-search-button" mat-raised-button color="primary"><span class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
+        <button id="mat-search-button" mat-raised-button color="primary" class="mat-button-entry me-2"><span
+                class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
+        <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button" matTooltip="Novo Orçamento" matTooltipPosition="above"><span
+                class="fa-solid fa-plus w-20px"></span></button>
     </div>
 </div>
 
