--- a/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/usuarios-pesquisa/usuarios-pesquisa.component.scss
@@ -24,7 +24,7 @@
   padding: 0px;
 }
 
-#mat-search-button {
-  margin-bottom: 0px;
-  align-self: center;
+.mat-button-entry {
+  margin-bottom: 0px !important;
+  align-self: center !important;
 }
