--- a/VaccineC/src/app/pages/home/home.component.html
+++ b/VaccineC/src/app/pages/home/home.component.html
@@ -2,5 +2,10 @@
     <app-side-menu></app-side-menu>
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
+        <section id="center" class="section-main">
+            <div id="is-content" class="flex-1 is-content is-content-grow">
+
+            </div>
+        </section>
     </div>
 </div>
