--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.scss
@@ -7,16 +7,17 @@
     margin-bottom: 2rem;
 }
 
-:host ::ng-deep .mat-table {
-    border-radius: 0.75rem !important;
-    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
-}
 
-:host ::ng-deep .mat-form-field-wrapper {
+.search-table-content{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  
+  :host ::ng-deep .search-group .mat-form-field-wrapper {
     padding: 0px;
-}
-
-.mat-button-entry {
+  }
+  
+  .mat-button-entry {
     margin-bottom: 0px !important;
     align-self: center !important;
-}
+  }
