--- a/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.html
@@ -7,28 +7,49 @@
                 <mat-icon>close</mat-icon>
             </button>
         </mat-form-field>
-        <button id="mat-search-button" mat-raised-button color="primary" class="mat-button-entry me-2"><span
+        <button (click)="loadResourceData()" id="mat-search-button" mat-raised-button color="primary"
+            class="mat-button-entry me-2"><span
                 class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
         <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button" matTooltip="Novo Recurso"
-        matTooltipPosition="above"><span
-                class="fa-solid fa-plus w-20px"></span></button>
+            matTooltipPosition="above"><span class="fa-solid fa-plus w-20px"></span></button>
     </div>
 </div>
 
 <div id="search-table">
-    <mat-table [dataSource]="dataSource" class="col-sm-11">
+    <div class="col-sm-11 search-table-content mat-elevation-z2">
+        <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name"
+            matSortDirection="asc">
 
-        <ng-container matColumnDef="resourceName">
-            <mat-header-cell *matHeaderCellDef> Recurso </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.resourceName}} </mat-cell>
-        </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="Name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Recurso </th>
+                <td mat-cell *matCellDef="let row"> {{row.Name}} </td>
+            </ng-container>
 
-        <ng-container matColumnDef="resourceUrl">
-            <mat-header-cell *matHeaderCellDef> URL </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.resourceUrl}} </mat-cell>
-        </ng-container>
+            <!-- UrlName Column -->
+            <ng-container matColumnDef="UrlName">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> URL </th>
+                <td mat-cell *matCellDef="let row"> {{row.UrlName}} </td>
+            </ng-container>
 
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
+            <ng-container matColumnDef="Options">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let row">
+                    <button mat-icon-button color="primary" title="Visualizar"><i
+                            class="fa-solid fa-pen-to-square"></i></button>
+
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+            </tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+    </div>
 </div>
