--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.html
@@ -2,7 +2,7 @@
     <div class="col-sm-11 p-0 d-flex">
         <mat-form-field class="search-form-field col-sm-9" appearance="outline">
             <mat-label>Digite a forma de pagamento</mat-label>
-            <input matInput type="text" [(ngModel)]="value">
+            <input matInput type="text"  [(ngModel)]="searchNamePaymentForm" id="searchNamePaymentForm">
             <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                 <mat-icon>close</mat-icon>
             </button>
