--- a/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.html
@@ -2,7 +2,7 @@
     <div class="col-sm-11 p-0 d-flex">
         <mat-form-field class="search-form-field col-sm-9" appearance="outline">
             <mat-label>Digite o nome do recurso</mat-label>
-            <input matInput type="text" [(ngModel)]="value">
+            <input matInput type="text" [(ngModel)]="searchNameResource" id="searchNameResource">
             <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                 <mat-icon>close</mat-icon>
             </button>
