--- a/VaccineC/src/app/pages/empresa/empresa-cadastro/empresa-cadastro.component.html
+++ b/VaccineC/src/app/pages/empresa/empresa-cadastro/empresa-cadastro.component.html
@@ -7,8 +7,8 @@
                     <input type="text" id="personId" placeholder="Selecione a Pessoa Jurídica" aria-label="Number"
                         matInput [formControl]="myControl" [matAutocomplete]="auto" required>
                     <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                            {{option}}
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option.Name">
+                            {{option.Name}}
                         </mat-option>
                     </mat-autocomplete>
                     <mat-icon matSuffix>search</mat-icon>
