--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-pesquisa/formas-pagamento-pesquisa.component.html
@@ -2,17 +2,23 @@
     <div class="col-sm-11 p-0 d-flex">
         <mat-form-field class="search-form-field col-sm-9" appearance="outline">
             <mat-label>Digite a forma de pagamento</mat-label>
-            <input matInput type="text"  [(ngModel)]="searchNamePaymentForm" id="searchNamePaymentForm">
+            <input matInput type="text" [(ngModel)]="searchNamePaymentForm" id="searchNamePaymentForm">
             <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
                 <mat-icon>close</mat-icon>
             </button>
         </mat-form-field>
-        <button (click)="loadPaymentFormData()" id="mat-search-button" mat-raised-button color="primary"
-            class="mat-button-entry me-2"><span
-                class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
-        <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button"
-            matTooltip="Nova Forma Pagamento" matTooltipPosition="above"><span
-                class="fa-solid fa-plus w-20px"></span></button>
+
+        <button (click)="loadPaymentFormData()" id="mat-search-button" mat-raised-button color="primary" class="mat-button-entry me-2" [disabled]="loading">
+            <div class="spinner">
+                <mat-spinner *ngIf="loading" [diameter]="15"></mat-spinner>
+                <span *ngIf="!loading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                Pesquisar
+            </div>
+        </button>
+
+        <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button" matTooltip="Nova Forma Pagamento" matTooltipPosition="above" (click)="addNewPaymentForm()">
+            <span class="fa-solid fa-plus w-20px"></span>
+        </button>
     </div>
 </div>
 
@@ -33,11 +39,17 @@
                 <td mat-cell *matCellDef="let row"> {{row.MaximumInstallments}} </td>
             </ng-container>
 
+            <!-- Id Hidden Column -->
+            <ng-container matColumnDef="ID">
+                <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="Options">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let row">
                     <button mat-icon-button color="primary" title="Visualizar"><i
-                            class="fa-solid fa-pen-to-square"></i></button>
+                            class="fa-solid fa-pen-to-square" (click)="updatePaymentForm()"></i></button>
 
                 </td>
             </ng-container>
