--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -3,10 +3,10 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Formas Pagamento" containerPath="Cadastros">
-      <mat-tab-group>
+      <mat-tab-group [selectedIndex]="selected.value" (selectedIndexChange)="selected.setValue($event)">
 
         <mat-tab label="Pesquisa">
-          <app-formas-pagamento-pesquisa></app-formas-pagamento-pesquisa>
+          <app-formas-pagamento-pesquisa (changeIndex)="selected.setValue($event)"></app-formas-pagamento-pesquisa>
         </mat-tab>
 
         <mat-tab label="Cadastro">
