--- a/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.html
@@ -8,10 +8,15 @@
             </button>
         </mat-form-field>
         <button (click)="loadResourceData()" id="mat-search-button" mat-raised-button color="primary"
-            class="mat-button-entry me-2"><span
-                class="fa-solid fa-magnifying-glass me-1 w-20px"></span><span>Pesquisar</span></button>
+            class="mat-button-entry me-2" [disabled]="loading">
+            <div class="spinner">
+                <mat-spinner *ngIf="loading" [diameter]="15"></mat-spinner>
+                <span *ngIf="!loading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                Pesquisar
+            </div>
+        </button>
         <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button" matTooltip="Novo Recurso"
-            matTooltipPosition="above"><span class="fa-solid fa-plus w-20px"></span></button>
+            matTooltipPosition="above" (click)="addNewResource()"><span class="fa-solid fa-plus w-20px"></span></button>
     </div>
 </div>
 
@@ -32,11 +37,17 @@
                 <td mat-cell *matCellDef="let row"> {{row.UrlName}} </td>
             </ng-container>
 
+            <!-- Id Hidden Column -->
+            <ng-container matColumnDef="ID">
+                <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+            </ng-container>
+
             <ng-container matColumnDef="Options">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let row">
                     <button mat-icon-button color="primary" title="Visualizar"><i
-                            class="fa-solid fa-pen-to-square"></i></button>
+                            class="fa-solid fa-pen-to-square" (click)="updateResource()"></i></button>
 
                 </td>
             </ng-container>
