--- a/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.scss
+++ b/VaccineC/src/app/pages/recursos/recursos-pesquisa/recursos-pesquisa.component.scss
@@ -7,7 +7,7 @@
   margin-bottom: 2rem;
 }
 
-.search-table-content{
+.search-table-content {
   padding-left: 0px;
   padding-right: 0px;
 }
@@ -23,4 +23,30 @@
 
 form {
   width: 100% !important;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 0px !important;
+  align-self: center !important;
+}
+
+.spinner{
+  display: flex;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
