--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-cadastro/formas-pagamento-cadastro.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-cadastro/formas-pagamento-cadastro.component.html
@@ -22,8 +22,8 @@
             </div>
             
             <div class="div-row-input registration-button-row">
-                <button mat-raised-button class="create-button" (click)="createUpdatePaymentForm()" type="submit"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
-                <button mat-raised-button color="warn" (click)="deletePaymentForm()" type="submit"><span class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
+                <button mat-raised-button class="create-button" (click)="createUpdatePaymentForm()" type="button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
+                <button mat-raised-button color="warn" (click)="deletePaymentForm()" type="button"><span class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
             </div>
 
         </div>
