--- a/VaccineC/src/app/pages/recursos/recursos-cadastro/recursos-cadastro.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos-cadastro/recursos-cadastro.component.html
@@ -23,12 +23,12 @@
 
             <div class="div-row-input registration-button-row">
                 
-                <button mat-raised-button class="create-button" (click)="createUpdateResource()" type="submit">
+                <button mat-raised-button class="create-button" (click)="createUpdateResource()" type="button">
                     <span class="fa-solid fa-floppy-disk me-1 w-20px"></span>
                     <span>Salvar</span>
                 </button>
                 
-                <button mat-raised-button color="warn" (click)="deleteResource()" type="submit">
+                <button mat-raised-button color="warn" (click)="deleteResource()" type="button">
                     <span class="fa-solid fa-trash me-1 w-20px"></span>
                     <span>Excluir</span>
                 </button>
