--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-cadastro/formas-pagamento-cadastro.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento-cadastro/formas-pagamento-cadastro.component.html
@@ -3,13 +3,21 @@
         <div class="offset-sm-1 col-sm-11 p-0">
 
             <mat-form-field [hidden]="true">
-                <input matInput #NameIdPaymentForm formControlName="IdPaymentForm" id="IdPaymentForm" [(ngModel)]="IdPaymentForm">
+                <input matInput
+                       #NameIdPaymentForm
+                       formControlName="IdPaymentForm"
+                       id="IdPaymentForm"
+                       [(ngModel)]="IdPaymentForm">
             </mat-form-field>
 
             <div class="div-row-input">
                 <mat-form-field appearance="fill" class="col-sm-11">
                     <mat-label>Forma de Pagamento</mat-label>
-                    <input matInput #NameInput formControlName="Name" maxlength="255" placeholder="Ex. Cartão de Crédito" id="name"
+                    <input matInput
+                           #NameInput
+                           formControlName="Name"
+                           maxlength="255"
+                           placeholder="Ex. Cartão de Crédito" id="name"
                     [(ngModel)]="Name" required>
                 </mat-form-field>
             </div>
@@ -17,13 +25,27 @@
             <div class="div-row-input">
                 <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Máximo de parcelas</mat-label>
-                    <input type="number" matInput #MaximumInstallmentsInput formControlName="MaximumInstallments" maxlength="10" id="maximumInstallments" [(ngModel)]="MaximumInstallments" required>
+                    <input type="number"
+                           matInput
+                           #MaximumInstallmentsInput
+                           formControlName="MaximumInstallments"
+                           maxlength="10" id="maximumInstallments"
+                           [(ngModel)]="MaximumInstallments"
+                           required>
                 </mat-form-field>
             </div>
-            
+
             <div class="div-row-input registration-button-row">
-                <button mat-raised-button class="create-button" (click)="createUpdatePaymentForm()" type="button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
-                <button mat-raised-button color="warn" (click)="deletePaymentForm()" type="button"><span class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
+                <button mat-raised-button
+                        class="create-button"
+                        (click)="createUpdatePaymentForm()"
+                        type="button"><span
+                        class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
+                <button mat-raised-button
+                        color="warn"
+                        (click)="deletePaymentForm()"
+                        type="button"><span
+                        class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
             </div>
 
         </div>
