--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -3,17 +3,124 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Formas Pagamento" containerPath="Cadastros">
-      <mat-tab-group [selectedIndex]="selected.value" (selectedIndexChange)="selected.setValue($event)">
+     
+      <mat-tab-group #tabGroup>
 
+        <!-- TAB PESQUISA -->
         <mat-tab label="Pesquisa">
-          <app-formas-pagamento-pesquisa (changeIndex)="selected.setValue($event)"></app-formas-pagamento-pesquisa>
+          <div class="search-group">
+            <div class="col-sm-11 p-0 d-flex">
+              <mat-form-field class="search-form-field col-sm-9" appearance="outline">
+                <mat-label>Digite a forma de pagamento</mat-label>
+                <input matInput type="text" [(ngModel)]="searchNamePaymentForm" id="searchNamePaymentForm">
+                <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+                  <mat-icon>close</mat-icon>
+                </button>
+              </mat-form-field>
+
+              <button (click)="loadPaymentFormData()" id="mat-search-button" mat-raised-button color="primary"
+                class="mat-button-entry me-2" [disabled]="loading">
+                <div class="spinner">
+                  <mat-spinner *ngIf="loading" [diameter]="15"></mat-spinner>
+                  <span *ngIf="!loading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                  Pesquisar
+                </div>
+              </button>
+
+              <button id="mat-add-button" (click)="tabGroup.selectedIndex=1" (click)="addNewPaymentForm()" mat-raised-button class="mat-button-entry create-button"
+                matTooltip="Nova Forma Pagamento" matTooltipPosition="above">
+                <span class="fa-solid fa-plus w-20px"></span>
+              </button>
+            </div>
+          </div>
+
+          <div id="search-table">
+            <div class="col-sm-11 search-table-content mat-elevation-z2">
+              <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name"
+                matSortDirection="asc">
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="Name">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Forma de Pagamento </th>
+                  <td mat-cell *matCellDef="let row"> {{row.Name}} </td>
+                </ng-container>
+
+                <!-- Maximum Installment Column -->
+                <ng-container matColumnDef="MaximumInstallments">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Parcelas </th>
+                  <td mat-cell *matCellDef="let row"> {{row.MaximumInstallments}} </td>
+                </ng-container>
+
+                <!-- Id Hidden Column -->
+                <ng-container matColumnDef="ID">
+                  <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                  <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Options">
+                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <td mat-cell *matCellDef="let row">
+                    <button mat-icon-button color="primary" title="Visualizar"><i
+                        class="fa-solid fa-pen-to-square" (click)="tabGroup.selectedIndex=1" (click)="editPaymentForm(row.ID)"></i></button>
+
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                  <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+                </tr>
+              </table>
+
+              <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            </div>
+          </div>
         </mat-tab>
 
+        <!-- TAB CADASTRO -->
         <mat-tab label="Cadastro">
-          <app-formas-pagamento-cadastro></app-formas-pagamento-cadastro>
+          <form [formGroup]="paymentFormForm">
+            <div class="registration-group">
+              <div class="offset-sm-1 col-sm-11 p-0">
+
+                <mat-form-field [hidden]="true">
+                  <input matInput #NameIdPaymentForm formControlName="IdPaymentForm" id="IdPaymentForm"
+                    [(ngModel)]="IdPaymentForm">
+                </mat-form-field>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-11">
+                    <mat-label>Forma de Pagamento</mat-label>
+                    <input matInput #NameInput formControlName="Name" maxlength="255"
+                      placeholder="Ex. Cartão de Crédito" id="name" [(ngModel)]="Name" required>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-6">
+                    <mat-label>Máximo de parcelas</mat-label>
+                    <input type="number" matInput #MaximumInstallmentsInput formControlName="MaximumInstallments"
+                      maxlength="10" id="maximumInstallments" [(ngModel)]="MaximumInstallments" required>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input registration-button-row">
+                  <button mat-raised-button class="create-button" (click)="createUpdatePaymentForm()"
+                    type="button"><span class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Salvar</span></button>
+                  <button mat-raised-button color="warn" (click)="deletePaymentForm()" type="button"><span
+                      class="fa-solid fa-trash me-1 w-20px"></span><span>Excluir</span></button>
+                </div>
+
+              </div>
+            </div>
+          </form>
         </mat-tab>
 
       </mat-tab-group>
+      
     </app-container>
   </div>
 </div>
