--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -5,7 +5,7 @@
         <app-container containerTitle="Recursos" containerPath="Gerencial">
             <mat-tab-group #tabGroup>
 
-                <!-- TAB PESQUISA -->
+                <!-- SEARCH TAB -->
                 <mat-tab label="Pesquisa">
                     <div class="search-group">
                         <div class="col-sm-11 p-0 d-flex">
@@ -17,16 +17,17 @@
                                 </button>
                             </mat-form-field>
                             <button (click)="loadResourceData()" id="mat-search-button" mat-raised-button
-                                color="primary" class="mat-button-entry me-2" [disabled]="loading">
+                                color="primary" class="mat-button-entry me-2" [disabled]="searchButtonLoading">
                                 <div class="spinner">
-                                    <mat-spinner *ngIf="loading" [diameter]="15"></mat-spinner>
-                                    <span *ngIf="!loading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                                    <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
+                                    <span *ngIf="!searchButtonLoading"
+                                        class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
                                     Pesquisar
                                 </div>
                             </button>
                             <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button"
-                                matTooltip="Novo Recurso" matTooltipPosition="above" (click)="tabGroup.selectedIndex=1" (click)="addNewResource()"><span
-                                    class="fa-solid fa-plus w-20px"></span></button>
+                                matTooltip="Novo Recurso" matTooltipPosition="above" (click)="tabGroup.selectedIndex=1"
+                                (click)="addNewResource()"><span class="fa-solid fa-plus w-20px"></span></button>
                         </div>
                     </div>
 
@@ -58,7 +59,8 @@
                                     <th mat-header-cell *matHeaderCellDef> </th>
                                     <td mat-cell *matCellDef="let row">
                                         <button mat-icon-button color="primary" title="Visualizar"><i
-                                                class="fa-solid fa-pen-to-square" (click)="tabGroup.selectedIndex=1" (click)="editResource(row.ID)"></i></button>
+                                                class="fa-solid fa-pen-to-square" (click)="tabGroup.selectedIndex=1"
+                                                (click)="editResource(row.ID)"></i></button>
 
                                     </td>
                                 </ng-container>
@@ -72,13 +74,13 @@
                                 </tr>
                             </table>
 
-                            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+                            <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
                         </div>
                     </div>
 
                 </mat-tab>
 
-                <!-- TAB CADASTRO -->
+                <!-- REGISTER TAB -->
                 <mat-tab label="Cadastro">
                     <form [formGroup]="resourceForm">
                         <div class="registration-group">
@@ -92,8 +94,16 @@
                                 <div class="div-row-input">
                                     <mat-form-field appearance="fill" class="col-sm-11">
                                         <mat-label>Recurso</mat-label>
-                                        <input matInput #NameInput formControlName="Name" maxlength="255"
+                                        <input matInput #NameInput formControlName="Name" [maxlength]="255"
                                             placeholder="Ex. Pessoas" id="name" [(ngModel)]="Name" required>
+                                        <mat-hint align="end">{{NameInput.value?.length || 0}}/255</mat-hint>
+                                        <mat-error
+                                            *ngIf="resourceForm.controls.Name.touched && resourceForm.controls.Name.invalid">
+                                            <span *ngIf="resourceForm.controls.Name.errors?.required">O Nome é
+                                                obrigatório.</span>
+                                            <span *ngIf="resourceForm.controls.Name.errors?.maxlength">O Nome deve ter
+                                                menos de 255 caracteres.</span>
+                                        </mat-error>
                                     </mat-form-field>
                                 </div>
 
@@ -103,20 +113,35 @@
                                         <input matInput #UrlNameInput formControlName="UrlName" maxlength="255"
                                             placeholder="Ex. https://vaccinec.com.br/pessoas" id="UrlName"
                                             [(ngModel)]="UrlName" required>
+                                        <mat-hint align="end">{{UrlNameInput.value?.length || 0}}/255</mat-hint>
+                                        <mat-error
+                                            *ngIf="resourceForm.controls.UrlName.touched && resourceForm.controls.UrlName.invalid">
+                                            <span *ngIf="resourceForm.controls.UrlName.errors?.required">A URL é
+                                                obrigatória.</span>
+                                            <span *ngIf="resourceForm.controls.UrlName.errors?.maxlength">A URL deve ter
+                                                menos de 255 caracteres.</span>
+                                        </mat-error>
                                     </mat-form-field>
                                 </div>
 
-                                <div class="div-row-input registration-button-row">
+                                <div class="div-row-input registration-button-row d-flex">
 
                                     <button mat-raised-button class="create-button" (click)="createUpdateResource()"
-                                        type="button">
-                                        <span class="fa-solid fa-floppy-disk me-1 w-20px"></span>
-                                        <span>Salvar</span>
+                                        type="button" [disabled]="createButtonLoading">
+                                        <div class="spinner">
+                                            <mat-spinner *ngIf="createButtonLoading" [diameter]="15"></mat-spinner>
+                                            <span *ngIf="!createButtonLoading"
+                                                class="fa-solid fa-floppy-disk me-1 w-20px"></span>
+                                            Salvar
+                                        </div>
                                     </button>
 
-                                    <button mat-raised-button color="warn" (click)="deleteResource()" type="button">
-                                        <span class="fa-solid fa-trash me-1 w-20px"></span>
-                                        <span>Excluir</span>
+                                    <button mat-raised-button color="warn" (click)="deleteResource()" type="button"
+                                        [disabled]="!IdResource">
+                                        <div>
+                                            <span class="fa-solid fa-trash me-1 w-20px"></span>
+                                            Excluir
+                                        </div>
                                     </button>
                                 </div>
 
